# hockey-pool-picker

./: .gitignore  Makefile  README.md  examples.ipynb  main.py  pick_2023.py  pyproject.toml  requirements.txt  season_simulator.py  solver.py  strategy.py
data/runs/: 2502-april-13-2023.txt
source/: backtest.py  cap_friendly.py  common.py  complete.py  hockey_reference.py
src/hockey_pool_picker/: backtest.py  common.py  crawl.py  crawl_cache.py  dataframe_util.py  main.py  ndjson.py  pick_pool.py  season.py  season_simulator.py  solver.py  util.py
src/hockey_pool_picker/core/: season.py  season_simulator.py  solver.py  strategy.py
src/hockey_pool_picker/sources/: backtest.py  crawl_cache.py  hockey_reference_games.py  hockey_reference_players.py  marqueur_cap_hit.py  ndjson.py  players.py  puckpedia.py
src/hockey_pool_picker/sources/cap_hit/: marqueur.py
src/hockey_pool_picker/sources/games/: hockey_reference.py
src/hockey_pool_picker/sources/stats/: hockey_reference.py
test/: smoke_test.py  sources_test.py
test/sources/: puckpedia_test.py
