[project]
name = "hockey_pool_picker"
version = "0.0.1"
description = "A hockey pool picker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests-cache>=1.2.1",
    "pandas>=2.2.3",
    "beautifulsoup4>=4.12.3",
    "unidecode>=1.3.8",
    "ortools>=9.11.4210",
    "numpy>=2.1.1",
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
    "pytest>=8.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
